src/test/ui/parser/keyword-use-as-identifier.stderr
error: expected pattern, found keyword `use`
  --> $DIR/keyword-use-as-identifier.rs:4:9
   |
LL |     let use = "foo";
   |         ^^^ expected pattern

error: aborting due to previous error

